# yabause-wii

./: CPackConfig.cmake  CPackSourceConfig.cmake  Makefile.in  aclocal.m4  cmake_install.cmake  commandautomakewii.txt  config.status  configure  configure.in
.svn/: all-wcprops  dir-prop-base  entries  entries.rej
autom4te.cache/: output.1  requests  traces.0  traces.1
autopackage/: default.apspec
autopackage/.svn/: all-wcprops  entries  entries.rej
doc/: Makefile  cmake_install.cmake
doc/.svn/: all-wcprops  entries.orig  entries.rej
l10n/: Makefile  Makefile.in  cmake_install.cmake
l10n/.svn/: all-wcprops  entries.orig  entries.rej
src/: CMakeLists.txt  Makefile.am  Makefile.am.rej  Makefile.in  Makefile.wii  cmake_install.cmake  config.h  cs0.c  memory.c  scsp.c  scsp2.c  scu.c  sh2core.c  sh2core.h  smpc.c  sndsdl.c  thr-wii.c  threads.h  vdp1.c  vdp1.h  vdp2.c  vdp2.c.rej  vidogl.c  vidshared.h  vidshared.h.org  vidshared.h.rej  vidsoft.c  vidsoft.c.rej  vidsoft.h  vidsoftold.c  yabause.c  yabause.dol  yabause.h
src/.svn/: all-wcprops  dir-prop-base  entries.orig  entries.rej
src/.svn/text-base/: CMakeLists.txt.svn-base  sh2core.c.svn-base  (+3 more)
src/c68k/: Makefile.in  aclocal.m4  cmake_install.cmake  config.status  configure
src/carbon/: Makefile  Makefile.in  cmake_install.cmake
src/dreamcast/: Makefile  Makefile.in  cmake_install.cmake
src/gtk/: Makefile  Makefile.in  cmake_install.cmake
src/psp/: Makefile  Makefile.in
src/qt/: Makefile  Makefile.in  cmake_install.cmake  yabause.pro
src/wii/: CMakeLists.txt  Makefile.am  Makefile.in  cmake_install.cmake  commandcmakewii.txt  commandcmakewiiclean.txt  iowii.c  iowii.h  perwii.c  sndwii.c  yui.c
src/wii_org/: CMakeLists.txt  perwii.h
src/windows/: Makefile  Makefile.in  cmake_install.cmake  yui.cpp
(+162 files in other folders)
